# PufferPhishTBD

./: .gitignore  AGENTS.md  CHANGELOG.md  PROJECT.md  README.md  ROADMAP.md  SECURITY.md  _fix2b.py  _fix_mojibake.py  index.html  package-lock.json  package.json  vite.config.ts
.github/scripts/: check-version-sync.mjs
.github/workflows/: ci.yml  create-release.yml  release.yml
PufferChat/: README.md  SECURITY.md  index.html  package.json
PufferChat/src/: App.tsx
PufferChat/src-tauri/src/: commands.rs  error.rs  main.rs
docs/: PHASE1-VERIFICATION.md  PHASE2-COMPLETION-PLAN.md  PHASE3-SECURITY-PLAN.md  USAGE.md  VULNERABILITY-MANAGEMENT.md  keyboard-shortcuts.md  plugin-development.md  user-guide.md
plugins/code-paste/: index.html  main.js  manifest.json
plugins/dice-roller/: index.html  main.js  manifest.json
plugins/polls/: index.html  main.js  manifest.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  link_preview.rs  phase8.rs
src-tauri/src/matrix/: client.rs  crypto.rs  media.rs  mod.rs  sync.rs  voip.rs
src/audio/: SoundEngine.ts
src/components/accessibility/: A11yProvider.tsx  SkipNavLink.tsx  index.ts
src/components/buddy-list/: BuddyList.module.css  BuddyList.tsx
src/components/calls/: CallButton.tsx  CallEndedDialog.tsx  CallHistory.tsx  CallOverlay.tsx  Calls.module.css  DeviceSelector.tsx  GroupCallView.tsx  InCallView.tsx  IncomingCallDialog.tsx  OutgoingCallDialog.tsx
src/components/chat/: AudioPlayer.module.css  AudioPlayer.tsx  ChatView.module.css  ChatView.tsx  ClipboardPasteHandler.tsx  FileDropZone.module.css  FileDropZone.tsx  GifPicker.module.css  GifPicker.tsx  (+27 more)
src/hooks/: useCall.ts  useDraftPersistence.ts  useEncryption.ts  useKeyboardShortcuts.ts  useMatrixEvents.ts  useMedia.ts  useMediaLazyLoad.ts  useMemory.ts  useModeration.ts  useSpaces.ts
src/plugins/: PluginBridge.ts  PluginDevWatcher.ts  PluginHost.tsx  PluginManager.ts  index.ts
src/stores/: accountStore.ts  auth.ts  calls.ts  categories.ts  encryption.ts  messages.ts  moderation.ts  pluginStore.ts  presence.ts  readReceipts.ts  rooms.ts  settings.ts  spaces.ts  typing.ts  uploads.ts
src/themes/: engine.ts
src/workers/: searchWorker.ts
(+79 files in other folders)
